<resources>
    <string name="user_name_display">%1$s %2$s</string>
    <string name="app_name">Share Moments</string>

    <string name="open">פתח</string>
    <string name="close">סגור</string>
    <string name="sign_in">התחברות</string>

    <string name="phone_number_hint">מספר טלפון</string>
    <string name="sign_in_btn_txt">הרשמה</string>
    <string name="verific_title_txt">אימות משתמש</string>
    <string name="enter_otp_txt">תקליד את הקוד שקיבלת</string>
    <string name="code_hint_txt">קוד</string>
    <string name="verify_btn_txt">לאמת</string>
    <string name="add_new_mentee_title_txt">הוספת חייל חדש</string>
    <string name="phone_lbl_for_details">מס\' טלפון:</string>
    <string name="name_lbl_for_details">שם:</string>
    <string name="surname_lbl_for_details">שם משפחה:</string>
    <string name="surname_hint_txt">שם משפחה</string>
    <string name="name_hint_txt">שם</string>
    <string name="serviceStart_lbl_for_details">תאריך גיוס:</string>
    <string name="serviceEnd_lbl_for_details">תאריך שחרור:</string>
    <string name="birthDay_lbl_for_details">תאריך לידה:</string>
    <string name="city_lbl_for_details">עיר מגורים:</string>
    <string name="homeland_lbl_for_details">ארץ מקור:</string>
    <string name="city_hint_txt">עיר מגורים</string>
    <string name="homeland_hint_txt">ארץ מקור</string>
    <string name="load_img_txt">לעלות תמונה</string>
    <string name="choose_photo_btn_txt">לבחור תמונה</string>
    <string name="save_btn_txt">שמור</string>
    <string name="new_moment_intro_txt">שתפו אותנו ברגעים משמעותיים עם החיילים</string>
    <string name="add_moment_title_txt">הוספת חוויה</string>
    <string name="free_text_title">טקסט חופשי</string>
    <string name="add_free_text_hint_txt">הוספת טקסט חופשי...</string>
    <string name="add_moment_btn_txt">להוסיף חוויה</string>
    <string name="our_moments_title_txt">רגעים שלנו</string>
    <string name="mentor_name_default">שם של מתנדב</string>
    <string name="num_mentees_lbl_for_details">מס\' חיילים:</string>
    <string name="phone_number_default">+972512345678</string>
    <string name="num_mentees_default">0</string>
    <string name="email_lbl_for_details">כתובת מייל:</string>
    <string name="email_example_default">name.fam@gmail.com</string>
    <string name="thank_you_txt1_profile">תודה על העשייה שלך במשך</string>
    <string name="volunteer_days_example">70</string>
    <string name="thank_you_txt2_profile">ימים!</string>
    <string name="add_mentee_title_txt">הוספת דיווח חדש</string>
    <string name="mentee_name_lbl_for_details">שם החייל:</string>
    <string name="mentor_name_lbl_for_details">שם המתנדב:</string>
    <string name="report_date_lbl_for_details">תאריך הדיווח:</string>
    <string name="report_details_lbl_for_details">פרטי הדיווח:</string>
    <string name="mentee_name_default">שם של חייל</string>
    <string name="add_report_btn_txt">להוסיף דיווח</string>
    <string name="homeland_default_txt">קנדה</string>
    <string name="city_default_txt">חולון</string>
    <string name="date_default_txt">10/08/2000</string>
    <string name="my_mentees_title_txt">חיילים שלי</string>
    <string name="nice_to_meet_txt_newUser">נעים להכיר!</string>
    <string name="email_adress_hint_txt">כתובת אלקטרונית</string>
    <string name="volunteer_start_date_hint_txt">תאריך תחילת התנדבות</string>
    <string name="choose_profile_photo_lbl">לבחור תמונת פרופיל</string>

    <string name="menu_profile_lbl">פרופיל</string>
    <string name="menu_my_mentees_lbl">חיילים שלי</string>
    <string name="menu_add_moment_lbl">להוסיף חוויה</string>
    <string name="menu_new_mentee_lbl">חייל חדש</string>
    <string name="menu_log_out_lbl">התנתק</string>
</resources>