<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.AddMomentActivity"
    android:background="@drawable/empty_two">




    <RelativeLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_menu_line"
        android:background="@color/blue_800_dark">

        <TextView
            android:id="@+id/moment_LBL_menu_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/title_default_size"
            android:textStyle="bold"
            android:text="@string/add_moment_title_txt" />
    </RelativeLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/moments_LBL_menu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end"
        android:textColor="@color/blue_800_dark"
        android:textSize="20sp"
        android:visibility="visible"
        android:background="@color/white"
        android:text="@string/new_moment_intro_txt" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/moments_LBL_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@color/white"
        android:text="@string/load_img_txt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/moment_BTN_choosePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end"
        android:backgroundTint="@color/grey"
        android:text="@string/choose_photo_btn_txt"
        app:cornerRadius="10dp">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/added_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        app:srcCompat="@drawable/load_photo_default"

        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/moments_LBL_add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/free_text_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moments_ET_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:boxStrokeColor="@color/blue_800_dark"
        android:background="@color/white"
        android:hint="@string/add_free_text_hint_txt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/moment_TXT_ddescription"

            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/moment_BTN_addMoment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end"
        android:text="@string/add_moment_btn_txt"
        app:cornerRadius="10dp">
    </com.google.android.material.button.MaterialButton>


</androidx.appcompat.widget.LinearLayoutCompat>