<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/mentee_CV_poster"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"       
        app:layout_constraintStart_toStartOf="@+id/mentee_CV_data"
        app:layout_constraintTop_toTopOf="@+id/mentee_CV_data">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/mentee_profile_IMG_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/profile_default"

        />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mentee_CV_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/height_of_menu_line"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="5dp">



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_LBL_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginVertical="5dp"
                android:maxLines="2"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/mentee_name_default"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_LBL_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentee_LBL_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginVertical="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/phone_lbl_for_details" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_LBL_serviceStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentee_LBL_phone"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginVertical="5dp"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/serviceStart_lbl_for_details" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_LBL_serviceEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentee_LBL_serviceStart"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginVertical="5dp"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/serviceEnd_lbl_for_details" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_LBL_birthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentee_LBL_serviceEnd"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginVertical="5dp"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/birthDay_lbl_for_details" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_LBL_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentee_LBL_birthDate"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginVertical="5dp"
                android:maxLines="3"
                android:minLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/city_lbl_for_details" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_TXT_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mentee_LBL_name"
                android:layout_marginEnd="36dp"
                android:layout_toStartOf="@+id/mentee_LBL_phone"
                android:layout_alignTop="@+id/mentee_LBL_phone"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="14sp"
                android:text="@string/phone_number_default" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_TXT_serviceStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/mentee_TXT_phone"
                android:layout_toStartOf="@+id/mentee_LBL_serviceStart"
                android:layout_alignTop="@+id/mentee_LBL_serviceStart"
                android:layout_marginEnd="110dp"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="14sp"
                android:text="@string/date_default_txt"

                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_TXT_serviceEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/mentee_TXT_serviceStart"
                android:layout_toStartOf="@+id/mentee_LBL_serviceEnd"
                android:layout_alignTop="@+id/mentee_LBL_serviceEnd"
                android:layout_marginEnd="110dp"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="14sp"
                android:text="@string/date_default_txt"
               />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_TXT_birthDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/mentee_TXT_serviceEnd"
                android:layout_toStartOf="@+id/mentee_LBL_birthDate"
                android:layout_alignTop="@+id/mentee_LBL_birthDate"
                android:layout_marginEnd="110dp"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="14sp"
                android:text="@string/date_default_txt"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_TXT_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/mentee_TXT_birthDay"
                android:layout_marginEnd="110dp"
                android:layout_toStartOf="@+id/mentee_LBL_city"
                android:layout_alignTop="@+id/mentee_LBL_city"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="14sp"
                android:text="@string/city_default_txt"
              />



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_LBL_homeland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentee_LBL_city"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:maxLines="3"
                android:minLines="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/homeland_lbl_for_details" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mentee_TXT_homeland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mentee_TXT_city"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="112dp"
                android:layout_toStartOf="@+id/mentee_LBL_homeland"
                android:layout_alignTop="@+id/mentee_LBL_homeland"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="14sp"
                android:text="@string/homeland_default_txt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mentees_BTN_addReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mentee_LBL_homeland"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="3dp"
                app:cornerRadius="10dp"
                android:text="@string/add_report_btn_txt"
                >
            </com.google.android.material.button.MaterialButton>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>